# anemoi-weathermart-plugins

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
src/anemoi_weathermart_plugins/: __init__.py
src/anemoi_weathermart_plugins/transform/: __init__.py  helpers.py  sources.py  xarray_extensions.py
src/anemoi_weathermart_plugins/transform/filters/: __init__.py  horizontal_interpolation.py
src/anemoi_weathermart_plugins/transform/filters/_vendor/: interp2grid.py
src/anemoi_weathermart_plugins/transform/sources/: __init__.py  weathermart_sources.py
tests/test_transform/: test_sources.py
